--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
+DATABASE_URL='postgres://nico:admin123@$locahost:5432/my_db'
+
 PORT=3000
 DB_USER=''
 DB_PASSWORD=''
 DB_HOST=''
 DB_NAME=''
 DB_PORT=''
-DATABASE_URL='postgres://nico:admin123@$locahost:5432/my_db'
+API_KEY=''
+
