--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "joi": "^17.12.1",
+    "local": "^0.3.3",
+    "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
